change buid file

--- a/app/index.html
+++ b/app/index.html
@@ -743,6 +743,7 @@
 
     </div>
 </footer>
+<link rel="stylesheet" href="css/main.css">
 <script src="js/all.js"></script>
 <script src="js/common.js"></script>
 </body>
